--- a/style.less
+++ b/style.less
@@ -44,7 +44,7 @@ h2 {
 	.north, .south { .make-row(); }
 	.south { margin-bottom: 1.2em; }
 
-	@lab-border-radius: 4px;
+	@lab-border-radius: 5px;
 	.middle .lab:first-child, .north .lab:first-child {  border-top-left-radius: @lab-border-radius; }
 	.middle .lab:last-child,  .north .lab:last-child  { border-top-right-radius: @lab-border-radius; }
 	.middle .lab:first-child, .south .lab:first-child {  border-bottom-left-radius: @lab-border-radius; }
@@ -73,14 +73,14 @@ h2 {
 			border-right:   1px solid lighten(@bg, 10%);
 			border-left:    1px solid  darken(@bg, 5%);
 			border-bottom:  1px solid  darken(@bg, 5%);
-			background: linear-gradient(lighten(@bg, 10%), @bg);
+			#gradient.vertical(lighten(@bg, 10%), @bg);
 
 			&:focus {
 				border-left:   1px solid lighten(@bg, 10%);
 				border-bottom: 1px solid lighten(@bg, 10%);
 				border-top:    1px solid  darken(@bg, 5%);
 				border-right:  1px solid  darken(@bg, 5%);
-				background: linear-gradient(darken(@bg, 5%), lighten(@bg, 0%));
+				#gradient.vertical(darken(@bg, 5%), lighten(@bg, 0%));
 				outline: 0; // Quita el re-borde azul
 			}
 		}
