--- a/style.css
+++ b/style.css
@@ -114,15 +114,14 @@ h2 strong {
   padding-right: 15px;
   min-height: 7em !important;
   padding: 0;
-  border-top: 1px solid #6f6f6f;
-  border-right: 1px solid #6f6f6f;
-  border-left: 1px solid #484848;
-  border-bottom: 1px solid #484848;
+  background: #555555;
   background-image: -webkit-linear-gradient(top, #6f6f6f 0%, #555555 100%);
   background-image: -o-linear-gradient(top, #6f6f6f 0%, #555555 100%);
   background-image: linear-gradient(to bottom, #6f6f6f 0%, #555555 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6f6f6f', endColorstr='#ff555555', GradientType=0);
+  border: 1px solid;
+  border-color: #6f6f6f #6f6f6f #484848 #484848;
 }
 .floorplan .lab.double {
   position: relative;
@@ -133,84 +132,69 @@ h2 strong {
   padding-right: 15px;
 }
 .floorplan .lab:focus {
-  border-left: 1px solid #6f6f6f;
-  border-bottom: 1px solid #6f6f6f;
-  border-top: 1px solid #484848;
-  border-right: 1px solid #484848;
   background-image: -webkit-linear-gradient(top, #484848 0%, #555555 100%);
   background-image: -o-linear-gradient(top, #484848 0%, #555555 100%);
   background-image: linear-gradient(to bottom, #484848 0%, #555555 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484848', endColorstr='#ff555555', GradientType=0);
+  border-color: #484848 #484848 #6f6f6f #6f6f6f;
   outline: 0;
 }
 .floorplan .lab.busy {
-  border-top: 1px solid rgba(189, 0, 0, 0.85);
-  border-right: 1px solid rgba(189, 0, 0, 0.85);
-  border-left: 1px solid rgba(112, 0, 0, 0.85);
-  border-bottom: 1px solid rgba(112, 0, 0, 0.85);
+  background: rgba(138, 0, 0, 0.85);
   background-image: -webkit-linear-gradient(top, rgba(189, 0, 0, 0.85) 0%, rgba(138, 0, 0, 0.85) 100%);
   background-image: -o-linear-gradient(top, rgba(189, 0, 0, 0.85) 0%, rgba(138, 0, 0, 0.85) 100%);
   background-image: linear-gradient(to bottom, rgba(189, 0, 0, 0.85) 0%, rgba(138, 0, 0, 0.85) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d9bd0000', endColorstr='#d98a0000', GradientType=0);
+  border: 1px solid;
+  border-color: rgba(189, 0, 0, 0.85) rgba(189, 0, 0, 0.85) rgba(112, 0, 0, 0.85) rgba(112, 0, 0, 0.85);
 }
 .floorplan .lab.busy:focus {
-  border-left: 1px solid rgba(189, 0, 0, 0.85);
-  border-bottom: 1px solid rgba(189, 0, 0, 0.85);
-  border-top: 1px solid rgba(112, 0, 0, 0.85);
-  border-right: 1px solid rgba(112, 0, 0, 0.85);
   background-image: -webkit-linear-gradient(top, rgba(112, 0, 0, 0.85) 0%, rgba(138, 0, 0, 0.85) 100%);
   background-image: -o-linear-gradient(top, rgba(112, 0, 0, 0.85) 0%, rgba(138, 0, 0, 0.85) 100%);
   background-image: linear-gradient(to bottom, rgba(112, 0, 0, 0.85) 0%, rgba(138, 0, 0, 0.85) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d9700000', endColorstr='#d98a0000', GradientType=0);
+  border-color: rgba(112, 0, 0, 0.85) rgba(112, 0, 0, 0.85) rgba(189, 0, 0, 0.85) rgba(189, 0, 0, 0.85);
   outline: 0;
 }
 .floorplan .lab.soon {
-  border-top: 1px solid rgba(228, 120, 12, 0.95);
-  border-right: 1px solid rgba(228, 120, 12, 0.95);
-  border-left: 1px solid rgba(155, 82, 8, 0.95);
-  border-bottom: 1px solid rgba(155, 82, 8, 0.95);
+  background: rgba(179, 94, 9, 0.95);
   background-image: -webkit-linear-gradient(top, rgba(228, 120, 12, 0.95) 0%, rgba(179, 94, 9, 0.95) 100%);
   background-image: -o-linear-gradient(top, rgba(228, 120, 12, 0.95) 0%, rgba(179, 94, 9, 0.95) 100%);
   background-image: linear-gradient(to bottom, rgba(228, 120, 12, 0.95) 0%, rgba(179, 94, 9, 0.95) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2e4780c', endColorstr='#f2b35e09', GradientType=0);
+  border: 1px solid;
+  border-color: rgba(228, 120, 12, 0.95) rgba(228, 120, 12, 0.95) rgba(155, 82, 8, 0.95) rgba(155, 82, 8, 0.95);
 }
 .floorplan .lab.soon:focus {
-  border-left: 1px solid rgba(228, 120, 12, 0.95);
-  border-bottom: 1px solid rgba(228, 120, 12, 0.95);
-  border-top: 1px solid rgba(155, 82, 8, 0.95);
-  border-right: 1px solid rgba(155, 82, 8, 0.95);
   background-image: -webkit-linear-gradient(top, rgba(155, 82, 8, 0.95) 0%, rgba(179, 94, 9, 0.95) 100%);
   background-image: -o-linear-gradient(top, rgba(155, 82, 8, 0.95) 0%, rgba(179, 94, 9, 0.95) 100%);
   background-image: linear-gradient(to bottom, rgba(155, 82, 8, 0.95) 0%, rgba(179, 94, 9, 0.95) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f29b5208', endColorstr='#f2b35e09', GradientType=0);
+  border-color: rgba(155, 82, 8, 0.95) rgba(155, 82, 8, 0.95) rgba(228, 120, 12, 0.95) rgba(228, 120, 12, 0.95);
   outline: 0;
 }
 .floorplan .lab.free {
-  border-top: 1px solid rgba(24, 165, 24, 0.85);
-  border-right: 1px solid rgba(24, 165, 24, 0.85);
-  border-left: 1px solid rgba(14, 98, 14, 0.85);
-  border-bottom: 1px solid rgba(14, 98, 14, 0.85);
+  background: rgba(17, 120, 17, 0.85);
   background-image: -webkit-linear-gradient(top, rgba(24, 165, 24, 0.85) 0%, rgba(17, 120, 17, 0.85) 100%);
   background-image: -o-linear-gradient(top, rgba(24, 165, 24, 0.85) 0%, rgba(17, 120, 17, 0.85) 100%);
   background-image: linear-gradient(to bottom, rgba(24, 165, 24, 0.85) 0%, rgba(17, 120, 17, 0.85) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d918a518', endColorstr='#d9117811', GradientType=0);
+  border: 1px solid;
+  border-color: rgba(24, 165, 24, 0.85) rgba(24, 165, 24, 0.85) rgba(14, 98, 14, 0.85) rgba(14, 98, 14, 0.85);
 }
 .floorplan .lab.free:focus {
-  border-left: 1px solid rgba(24, 165, 24, 0.85);
-  border-bottom: 1px solid rgba(24, 165, 24, 0.85);
-  border-top: 1px solid rgba(14, 98, 14, 0.85);
-  border-right: 1px solid rgba(14, 98, 14, 0.85);
   background-image: -webkit-linear-gradient(top, rgba(14, 98, 14, 0.85) 0%, rgba(17, 120, 17, 0.85) 100%);
   background-image: -o-linear-gradient(top, rgba(14, 98, 14, 0.85) 0%, rgba(17, 120, 17, 0.85) 100%);
   background-image: linear-gradient(to bottom, rgba(14, 98, 14, 0.85) 0%, rgba(17, 120, 17, 0.85) 100%);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d90e620e', endColorstr='#d9117811', GradientType=0);
+  border-color: rgba(14, 98, 14, 0.85) rgba(14, 98, 14, 0.85) rgba(24, 165, 24, 0.85) rgba(24, 165, 24, 0.85);
   outline: 0;
 }
 .floorplan .lab .info {
@@ -237,6 +221,32 @@ h2 strong {
   text-shadow: -1px 1px 0 #888888;
   opacity: 0.7;
   vertical-align: center;
+}
+footer {
+  text-align: center;
+}
+footer hr {
+  margin-top: 0;
+  width: 100%;
+  height: 12px;
+  border: 0;
+}
+footer p {
+  display: block;
+  margin: 0 auto;
+  padding: 0 0 20px 0;
+}
+footer p span.heart {
+  font-size: 0;
+  color: darkred;
+  display: inline-block;
+  -webkit-animation: heartbeat 1s ease-out infinite;
+  -o-animation: heartbeat 1s ease-out infinite;
+  animation: heartbeat 1s ease-out infinite;
+}
+footer p span.heart:before {
+  content: '❤';
+  font-size: 18px;
 }
 @keyframes heartbeat {
   from {
@@ -265,32 +275,6 @@ h2 strong {
     -o-transform: scale(1);
     transform: scale(1);
   }
-}
-footer {
-  text-align: center;
-}
-footer hr {
-  margin-top: 0;
-  width: 100%;
-  height: 12px;
-  border: 0;
-}
-footer p {
-  display: block;
-  margin: 0 auto;
-  padding: 0 0 20px 0;
-}
-footer p span.heart {
-  font-size: 0;
-  color: darkred;
-  display: inline-block;
-  -webkit-animation: heartbeat 1s ease-out infinite;
-  -o-animation: heartbeat 1s ease-out infinite;
-  animation: heartbeat 1s ease-out infinite;
-}
-footer p span.heart:before {
-  content: '❤';
-  font-size: 18px;
 }
 footer small {
   display: block;
