--- a/style.less
+++ b/style.less
@@ -1,10 +1,15 @@
+// ============================================================================
+// Bootstrap y fuentes
+// ============================================================================
 @import (reference) "lib/bootstrap/less/utilities.less";
 @import (reference) "lib/bootstrap/less/variables.less";
 @import (reference) "lib/bootstrap/less/mixins.less";
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:800,600,400);
 
-// Paleta de colores
+// ============================================================================
+// Layout general
+// ============================================================================
 html, body {
 	height: 100%;
 	background-color: #999;
@@ -29,7 +34,9 @@ h2 {
 	}
 }
 
-// Contenedor del mapa
+// ============================================================================
+// Plano de la EPS
+// ============================================================================
 .floorplan {
 	.make-row();
 	padding-bottom: 3em;
@@ -41,7 +48,9 @@ h2 {
 		// Un poquito de padding
 		padding: 0 2em;
 	}
-	.north, .south { .make-row(); }
+	.north, .south {
+		.make-row();
+	}
 	.south { margin-bottom: 1.2em; }
 
 	@lab-border-radius: 5px;
@@ -69,18 +78,22 @@ h2 {
 		padding: 0;
 
 		.colorize-lab-mixin(@bg) {
-			border-top:     1px solid lighten(@bg, 10%);
-			border-right:   1px solid lighten(@bg, 10%);
-			border-left:    1px solid  darken(@bg, 5%);
-			border-bottom:  1px solid  darken(@bg, 5%);
+			// Fondo
+			background: @bg;
 			#gradient.vertical(lighten(@bg, 10%), @bg);
 
+			// Bordes
+			@border-light: lighten(@bg, 10%);
+			@border-dark:   darken(@bg, 5%);
+			border: 1px solid;
+			border-color: @border-light @border-light
+				          @border-dark  @border-dark;
+
+			// Cuando esta seleccionado
 			&:focus {
-				border-left:   1px solid lighten(@bg, 10%);
-				border-bottom: 1px solid lighten(@bg, 10%);
-				border-top:    1px solid  darken(@bg, 5%);
-				border-right:  1px solid  darken(@bg, 5%);
 				#gradient.vertical(darken(@bg, 5%), lighten(@bg, 0%));
+				border-color: @border-dark  @border-dark
+					          @border-light @border-light;
 				outline: 0; // Quita el re-borde azul
 			}
 		}
@@ -123,15 +136,9 @@ h2 {
 
 }
 
-@keyframes heartbeat {
-	from { .scale(1.1); }
-	to   { .scale(1.0); }
-}
-@-webkit-keyframes heartbeat {
-	from { .scale(1.1); }
-	to   { .scale(1.0); }
-}
-
+// ============================================================================
+// Pie de pagina
+// ============================================================================
 footer {
 	text-align: center;
 	hr {
@@ -151,7 +158,16 @@ footer {
 			// Estilado y animacion
 			color: darkred;
 			display: inline-block;
+			// Darle vidilla
 			.animation(heartbeat 1s ease-out infinite);
+			@keyframes heartbeat {
+				from { .scale(1.1); }
+				to   { .scale(1.0); }
+			}
+			@-webkit-keyframes heartbeat {
+				from { .scale(1.1); }
+				to   { .scale(1.0); }
+			}
 		}
 	}
 	small {
