Mejorado organizacion interna, reescrito README

--- a/index.jade
+++ b/index.jade
@@ -26,7 +26,7 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 		script(type='text/javascript' src='app.js')
 
 		<!--[if lt IE 9]>
-		script(src='http://html5shim.googlecode.com/svn/trunk/html5.js')
+		script(src='//html5shim.googlecode.com/svn/trunk/html5.js')
 		<![endif]-->
 
 	body
@@ -74,5 +74,5 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 				//-a(href='https://github.com/ManuelBlanc/eps-dotfiles') configuracion
 			//- Github ribbon
 			a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io' title="Fork me on GitHub")
-				| El codigo fuente esta disponible en GitHub.
+				| Fork me on GitHub
 
