--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 .container-fluid {
-  position: relative;
   background-color: #afafaf;
+  box-shadow: 0 12px 50px -12px rgba(0, 0, 0, 0.5);
   padding-top: 3%;
   padding-left: 5%;
   padding-right: 5%;
-  box-shadow: 0 12px 50px -12px rgba(0, 0, 0, 0.5);
+  padding-bottom: 5vh;
   min-height: 80vh;
 }
 h2 {
@@ -39,7 +39,6 @@ h2 strong {
 .floorplan {
   margin-left: -15px;
   margin-right: -15px;
-  padding-bottom: 3em;
 }
 .floorplan .west,
 .floorplan .east {
@@ -50,6 +49,7 @@ h2 strong {
   padding-left: 15px;
   padding-right: 15px;
   padding: 0 2em;
+  margin-bottom: 1.2em;
 }
 @media (min-width: 768px) {
   .floorplan .west,
@@ -62,9 +62,6 @@ h2 strong {
 .floorplan .south {
   margin-left: -15px;
   margin-right: -15px;
-}
-.floorplan .south {
-  margin-bottom: 1.2em;
 }
 .floorplan .middle .lab:first-child,
 .floorplan .north .lab:first-child {
@@ -83,7 +80,6 @@ h2 strong {
   border-bottom-right-radius: 5px;
 }
 .floorplan .middle {
-  padding: 0 2em;
   float: left;
   width: 100%;
   position: relative;
@@ -113,7 +109,6 @@ h2 strong {
   padding-left: 15px;
   padding-right: 15px;
   min-height: 7em !important;
-  padding: 0;
   background: #555555;
   background-image: -webkit-linear-gradient(top, #6f6f6f 0%, #555555 100%);
   background-image: -o-linear-gradient(top, #6f6f6f 0%, #555555 100%);
@@ -202,6 +197,12 @@ h2 strong {
   display: inline-block;
   margin-top: 0.2em;
   width: 100%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   font-size: 0.8em;
 }
 .floorplan .lab .info.activity {
