Updated ribbon URL

--- a/index.jade
+++ b/index.jade
@@ -73,6 +73,6 @@ html(lang='es' xmlns='http://www.w3.org/1999/xhtml')
 				//-| Tambien puede interesante mi&nbsp;
 				//-a(href='https://github.com/ManuelBlanc/eps-dotfiles') configuracion
 			//- Github ribbon
-			a.ribbon(href='https://github.com/ManuelBlanc/ManuelBlanc.github.io' title="Fork me on GitHub")
+			a.ribbon(href='https://github.com/ManuelBlanc/eps-free-labs' title="Fork me on GitHub")
 				| Fork me on GitHub
 
